# computer_graphics

./: .gitignore  CMakeLists.txt  cg_1.sln
cg_1/: CMakeLists.txt  Histogram.cpp  Histogram.h  ImageNew.h  Traits.h  cg_1.vcxproj  cg_1.vcxproj.filters  image.cpp  image.h  main.cpp
cg_1/libs/: CMakeLists.txt
cg_1/libs/stb/: CMakeLists.txt
